# data-quality-scoring-demo

./: .gitignore  README.md  pyproject.toml
demo/: .user.yml  dataengineercafe-admin-bfd4db61182a.json  dbt_project.yml  packages.yml  profiles.yml
demo/docs/models/: order_status.md
demo/models/: exposures.yml
demo/models/marts/: _schema.yml  dim_customers.sql  dim_orders.sql  dim_products.sql
demo/models/staging/breakfast_at_the_frat/: _schema.yml  _src.yml  stg_breakfast_at_the_frat__products.sql  stg_breakfast_at_the_frat__stores.sql  stg_breakfast_at_the_frat__transactions.sql
demo/models/staging/jaffle_shop/: _schema.yml  _src.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql  stg_jaffle_shop__stripe_payments.sql
