[tool.poetry]
name = "data-quality-scoring-demo"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
readme = "README.md"
packages = [{include = "data_quality_scoring_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "1.5.0"
dbt-bigquery = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
